
PIG-4570: Allow AvroStorage to use a class for the schema (pmazak via daijy)

PIG-4405: Adding 'map[]' support to mock/Storage (nielsbasjes via daijy)

PIG-4638: Allow TOMAP to accept dynamically sized input (nielsbasjes via daijy)

PIG-4639: Add better parser for Apache HTTPD access log (nielsbasjes via daijy)

BUG FIXES

PIG-4814: AvroStorage does not take namenode HA as part of schema file url (daijy)

PIG-4812: Register Groovy UDF with relative path does not work (daijy)

PIG-4806: UDFContext can be reset in the middle during Tez input and output initialization (rohini)

PIG-4808: PluckTuple overwrites regex if used more than once in the same script (eyal via daijy)

PIG-4801: Provide backward compatibility with mapreduce mapred.task settings (rohini)

PIG-4759: Fix Classresolution_1 e2e failure (rohini)

PIG-4800: EvalFunc.getCacheFiles() fails for different namenode (rohini)

PIG-4790: Join after union fail due to UnionOptimizer (rohini)

PIG-4686: Backend code should not call AvroStorageUtils.getPaths (mitdesai via rohini)

PIG-4795: Flushing ObjectOutputStream before calling toByteArray on the underlying ByteArrayOutputStream (emopers via daijy)

PIG-4690: Union with self replicate join will fail in Tez (rohini)

PIG-4791: PORelationToExprProject filters records instead of returning emptybag in nested foreach after union (rohini)

PIG-4779: testBZ2Concatenation[pig.bzip.use.hadoop.inputformat = true] failing due to successful read (knoguchi)

PIG-4587: Applying isFirstReduceOfKey for Skewed left outer join skips records (rohini)

PIG-4782: OutOfMemoryError: GC overhead limit exceeded with POPartialAgg (rohini)

PIG-4737: Check and fix clone implementation for all classes extending PhysicalOperator (rohini)

PIG-4770: OOM with POPartialAgg in some cases (rohini)

PIG-4773: [Pig on Tez] Secondary key descending sort in nested foreach after union does ascending instead (rohini)

PIG-4774: Fix NPE in SUM,AVG,MIN,MAX UDFs for null bag input (rohini)
