@@ -321,6 +321,18 @@ TOKEN_MGR_DECLS : {
         saveState(prevState);
         prevState = GENERATE;
      } : SCHEMA_DEFINITION
+|   <"--">
+    {
+        prevState = getState(prevState);
+        saveState(prevState);
+        prevState = GENERATE;
+    } : SINGLE_LINE_COMMENT
+|      <"/*">
+    {
+        prevState = getState(prevState);
+        saveState(prevState);
+        prevState = GENERATE;
+    } : MULTI_LINE_COMMENT
 |   <"'">
     {
         prevState = getState(prevState);
